[package]
name = "scooby"
version = "0.1.0"
authors = ["Aleksei Voronov <despawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"

[dev-dependencies]
postgres = "0.19.1"

[features]
validate-postgres-syntax = []
