[package]
name = "scooby"
version = "0.1.2"
authors = ["Aleksei Voronov <despawn@gmail.com>"]
edition = "2018"
description = "An SQL query builder with a pleasant fluent API closely imitating actual SQL"
readme = "README.md"
repository = "https://github.com/despawnerer/scooby"
license = "MIT OR Apache-2.0"
keywords = ["SQL", "builder", "query"]
categories = ["database", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"

[dev-dependencies]
postgres = "0.19.1"

[features]
validate-postgres-syntax = []
